@startuml design

class GameRole {
    + Vitality
    + Attack
    + Defense
    + saveState(): RoleStateMemento
    + recoveryState(RoleStateMemento memento)
}

class RoleStateMemento {
    + Vitality
    + Attack
    + Defense
}

GameRole ..> RoleStateMemento

class RoleStateCaretaker{
    + RoleStateMemento
}

RoleStateMemento <--o RoleStateCaretaker

@enduml